--- a/vercel.json
+++ b/vercel.json
@@ -5,12 +5,7 @@
   "installCommand": "npm ci",
   "framework": "nextjs",
   "regions": ["iad1"],
-  "env": {
-    "DATABASE_URL": "@database_url",
-    "NEXTAUTH_URL": "@nextauth_url",
-    "NEXTAUTH_SECRET": "@nextauth_secret",
-    "DEEPSEEK_API_KEY": "@deepseek_api_key"
-  },
+  "env": {},
   "headers": [
     {
       "source": "/(.*)",
