--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "test:e2e": "start-server-and-test dev http://localhost:3000 cypress",
     "test:e2e:ci": "start-server-and-test start http://localhost:3000 cypress:headless",
     "postinstall": "prisma generate",
-    "analyze": "ANALYZE=true next build"
+    "analyze": "ANALYZE=true next build",
+    "prepare": "husky",
+    "type-check": "tsc --noEmit",
+    "type-check:build": "tsc --noEmit --project tsconfig.build.json",
+    "test-build": "./scripts/test-build.sh"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.1",
@@ -54,6 +58,7 @@
     "cypress": "^14.3.3",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prisma": "^5.9.0",
