Add proper build error detection tools with focused deployment error checking

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prepare": "husky",
     "type-check": "tsc --noEmit",
     "type-check:build": "tsc --noEmit --project tsconfig.build.json",
+    "check-deployment": "./scripts/check-deployment-errors.sh",
     "test-build": "./scripts/test-build.sh"
   },
   "dependencies": {
