Fix script paths for Windows compatibility

--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "prepare": "husky",
     "type-check": "tsc --noEmit",
     "type-check:build": "tsc --noEmit --project tsconfig.build.json",
-    "check-deployment": "./scripts/check-deployment-errors.sh",
-    "test-build": "./scripts/test-build.sh"
+    "check-deployment": "bash scripts/check-deployment-errors.sh",
+    "test-build": "bash scripts/test-build.sh"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.1",
