--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "type-check": "tsc --noEmit",
     "type-check:build": "tsc --noEmit --project tsconfig.build.json",
     "check-deployment": "bash scripts/check-deployment-errors.sh",
-    "test-build": "bash scripts/test-build.sh"
+    "test-build": "bash scripts/test-build.sh",
+    "vercel-build:local": "node scripts/local-vercel-build.js"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.1",
@@ -27,7 +28,7 @@
     "@heroicons/react": "^2.2.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.22.0",
-    "@react-three/drei": "^10.0.7",
+    "@react-three/drei": "^9.99.0",
     "@react-three/fiber": "^9.1.2",
     "@react-three/postprocessing": "^3.0.4",
     "@types/bcrypt": "^5.0.2",
@@ -37,6 +38,7 @@
     "autoprefixer": "^10.4.17",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "critters": "^0.0.23",
     "dotenv": "^16.5.0",
     "eventsource-parser": "^3.0.2",
     "framer-motion": "^12.11.3",
@@ -56,6 +58,7 @@
     "@testing-library/jest-dom": "^6.4.0",
     "@testing-library/react": "^14.2.0",
     "@types/bcryptjs": "^2.4.6",
+    "babel-loader": "^10.0.0",
     "cypress": "^14.3.3",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
