--- a/vercel.json
+++ b/vercel.json
@@ -3,9 +3,8 @@
   "buildCommand": "npm run build",
   "devCommand": "npm run dev",
   "installCommand": "npm install --legacy-peer-deps",
-  "framework": "nextjs",
+  "framework": null,
   "regions": ["iad1"],
-  "ignoreCommand": "echo 'Ignoring build errors and continuing deployment'",
   "env": {},
   "headers": [
     {
