Fix dynamic route handling for Vercel deployment

--- a/vercel.json
+++ b/vercel.json
@@ -38,6 +38,18 @@
         {
           "key": "Cache-Control",
           "value": "no-store, max-age=0"
+        },
+        {
+          "key": "Pragma",
+          "value": "no-cache"
+        },
+        {
+          "key": "Expires",
+          "value": "0"
+        },
+        {
+          "key": "X-Vercel-Cache",
+          "value": "BYPASS"
         }
       ]
     },
