Add enhanced Vercel build script with robust error handling

--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "node scripts/vercel-build-bypass.js",
+    "build": "node scripts/enhanced-vercel-build.js",
     "build:next": "next build",
-    "build:bypass": "node scripts/vercel-build-bypass.js",
+    "build:bypass": "node scripts/enhanced-vercel-build.js",
+    "build:legacy": "node scripts/vercel-build-bypass.js",
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
