Optimize for Vercel deployment with improved build scripts, SEO enhancements, and documentation

--- a/.env.production
+++ b/.env.production
@@ -3,13 +3,19 @@ NODE_ENV=production
 VERCEL=1
 
 # Next Auth configuration
+# IMPORTANT: Update this to your actual deployment URL
 NEXTAUTH_URL=https://aura-edm1922.vercel.app
-NEXTAUTH_SECRET=your-nextauth-secret-will-be-set-in-vercel-dashboard
+# IMPORTANT: Set this in Vercel environment variables (min 32 characters)
+NEXTAUTH_SECRET=${NEXTAUTH_SECRET}
 
 # Database configuration
-# These will be set in the Vercel dashboard
-DATABASE_URL=your-database-url-will-be-set-in-vercel-dashboard
+# IMPORTANT: Set this in Vercel environment variables
+# Use Vercel Postgres or your external PostgreSQL database
+DATABASE_URL=${DATABASE_URL}
 
 # DeepSeek API configuration
-# These will be set in the Vercel dashboard
-DEEPSEEK_API_KEY=your-deepseek-api-key-will-be-set-in-vercel-dashboard
+# IMPORTANT: Set this in Vercel environment variables
+DEEPSEEK_API_KEY=${DEEPSEEK_API_KEY}
+
+# NOTE: All ${VARIABLE} placeholders will be replaced by Vercel
+# with the actual environment variables set in the Vercel dashboard
