--- a/vercel.json
+++ b/vercel.json
@@ -3,51 +3,32 @@
   "buildCommand": "npm run build",
   "devCommand": "npm run dev",
   "installCommand": "npm install --legacy-peer-deps",
-  "outputDirectory": ".next",
-  "framework": false,
+  "framework": "nextjs",
   "regions": ["iad1"],
-  "env": {
-    "NODE_ENV": "production",
-    "VERCEL_ENV": "production"
-  },
-  "builds": [
+  "headers": [
     {
-      "src": ".next/server.js",
-      "use": "@vercel/node"
+      "source": "/api/(.*)",
+      "headers": [
+        { "key": "Cache-Control", "value": "no-store, max-age=0" },
+        { "key": "X-Content-Type-Options", "value": "nosniff" },
+        { "key": "X-Frame-Options", "value": "DENY" },
+        { "key": "X-XSS-Protection", "value": "1; mode=block" }
+      ]
     },
     {
-      "src": ".next/static/**",
-      "use": "@vercel/static"
+      "source": "/(.*)",
+      "headers": [
+        { "key": "X-Content-Type-Options", "value": "nosniff" },
+        { "key": "X-Frame-Options", "value": "DENY" },
+        { "key": "X-XSS-Protection", "value": "1; mode=block" },
+        { "key": "Referrer-Policy", "value": "strict-origin-when-cross-origin" },
+        { "key": "Permissions-Policy", "value": "camera=(), microphone=(), geolocation=()" }
+      ]
     }
   ],
-  "routes": [
-    {
-      "src": "/_next/static/(.*)",
-      "dest": ".next/static/$1",
-      "headers": {
-        "Cache-Control": "public, max-age=31536000, immutable"
-      }
-    },
-    {
-      "src": "/api/(.*)",
-      "dest": ".next/server.js",
-      "headers": {
-        "Cache-Control": "no-store, max-age=0",
-        "Pragma": "no-cache",
-        "Expires": "0",
-        "X-Vercel-Cache": "BYPASS"
-      }
-    },
-    {
-      "src": "/(.*)",
-      "dest": ".next/server.js",
-      "headers": {
-        "X-Content-Type-Options": "nosniff",
-        "X-Frame-Options": "DENY",
-        "X-XSS-Protection": "1; mode=block",
-        "Referrer-Policy": "strict-origin-when-cross-origin",
-        "Permissions-Policy": "camera=(), microphone=(), geolocation=()"
-      }
-    }
-  ]
+  "images": {
+    "sizes": [256, 512, 1024, 2048],
+    "domains": ["lh3.googleusercontent.com", "avatars.githubusercontent.com"],
+    "formats": ["image/avif", "image/webp"]
+  }
 }
