Fix Vercel deployment issues: Add Suspense boundaries for useSearchParams and set API routes as dynamic

--- a/.env.production
+++ b/.env.production
@@ -6,16 +6,16 @@ VERCEL=1
 # IMPORTANT: Update this to your actual deployment URL
 NEXTAUTH_URL=https://aura-edm1922.vercel.app
 # IMPORTANT: Set this in Vercel environment variables (min 32 characters)
-NEXTAUTH_SECRET=${NEXTAUTH_SECRET}
+# NEXTAUTH_SECRET should be set in Vercel dashboard
 
 # Database configuration
 # IMPORTANT: Set this in Vercel environment variables
 # Use Vercel Postgres or your external PostgreSQL database
-DATABASE_URL=${DATABASE_URL}
+# DATABASE_URL should be set in Vercel dashboard
 
 # DeepSeek API configuration
 # IMPORTANT: Set this in Vercel environment variables
-DEEPSEEK_API_KEY=${DEEPSEEK_API_KEY}
+# DEEPSEEK_API_KEY should be set in Vercel dashboard
 
-# NOTE: All ${VARIABLE} placeholders will be replaced by Vercel
-# with the actual environment variables set in the Vercel dashboard
+# NOTE: Do not use ${VARIABLE} syntax in this file
+# Set actual environment variables in the Vercel dashboard
